package org.example.board;

public interface IJump {
    int from();
    int to();
    boolean isSnake();
}
